--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <header>
         <h1>Mike Sturm</h1>
         <p>Thinker, writer, <i>bon vivant</i>.</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <p class="view">Subscribe to my newsletter. I won't bother you often.</p>
+        <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+        
         <ul>
           <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong>on Twitter</strong></a></li>
           <li><a href="https://medium.com/@mikesturm">Read longform <strong>on Medium</strong></a></li>
