--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <footer>
 
           <p class="view">Subscribe to my newsletter. I won't bother you often.</p>
-          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
         <p><small>Copyright 2016 &mdash; All rights reserved.</small></p>
         <p><small>Hosted on GitHub Pages</small></p>
