--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Mike Sturm</h1>
+        <img src="http://www.mikesturm.net/Skeleton/images/Alchemical.png">
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
