--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         </ul>
 
       </header>
-
-        <h2>About</h2>
+      <section>
+        <h1>About</h1>
 
         <p>I am an escaped academic, with an expertise in the written word, a talent for strategy, and a keen eye for design. This means that I excel at branding, social media marketing, content creation (though <a href="https://hackernoon.com/please-stop-calling-it-content-778bf3abfea3#.lr5pmrin7">I prefer to not to use that term</a>), and design. It means that whatever your brand is, I can help you make sure it realizes its full potential on the web. </p>
+      </section>
 
-
-
+      <section>
         <h2>Writings</h2>
         <p>I have been writing on the web for several years now, so my work is scattered all over the web. Below are the pieces that I consider some of my best work to date. So far, it is all held within the Medium platform.
            <ul>
@@ -49,6 +49,7 @@
            </ul>
          </p>
 
+      </section>
       <footer>
 
           <p class="view">Subscribe to my newsletter. I won't bother you often.</p>
