--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <title>Mike Sturm - Wordsmith</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="http://www.mikesturm.net/Skeleton/images/Alchemical.png" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -25,9 +27,9 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
-          <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong>on Twitter</strong></a></li>
-          <li><a href="https://medium.com/@mikesturm">Read longform <strong>on Medium</strong></a></li>
-          <li><a href="mailto:mike@yourfool.com">Drop Me <strong>A Line</strong></a></li>
+          <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong>on Twitter</strong><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="https://medium.com/@mikesturm">Read longform <strong>on Medium</strong><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+          <li><a href="mailto:mike@yourfool.com">Drop Me <strong>A Line</strong></a><i class="fa fa-envelope" aria-hidden="true"></i></li>
         </ul>
 
       </header>
