--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
-          <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong>on Twitter</strong><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="https://medium.com/@mikesturm">Read longform <strong>on Medium</strong><i class="fa fa-medium" aria-hidden="true"></i></a></li>
-          <li><a href="mailto:mike@yourfool.com">Drop Me <strong>A Line</strong></a><i class="fa fa-envelope" aria-hidden="true"></i></li>
+          <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong><i class="fa fa-twitter" aria-hidden="true"></i></strong></a></li>
+          <li><a href="https://medium.com/@mikesturm">Read longform <strong><i class="fa fa-medium" aria-hidden="true"></i></strong></a></li>
+          <li><a href="mailto:mike@yourfool.com">Contact Me <strong><i class="fa fa-envelope" aria-hidden="true"></i></strong></a></li>
         </ul>
 
       </header>
