--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <section>
         <h2>Writings</h2>
-        <p>I have been writing on the web for several years now, so my work is scattered all over the web. Below are the pieces that I consider some of my best work to date. So far, it is all held within the Medium platform.
+        <p>I have been writing online for several years now, so my work is scattered all over the web. Below are the pieces that I consider some of my best work to date. So far, it is all held within the Medium platform.
            <ul>
              <li><a href"https://extranewsfeed.com/is-all-our-work-killing-our-future-d946773568ba#.z4fjdjj3w">Is All Our Hard Work Killing Our Future?</a></li>
              <li><a href="https://hackernoon.com/outline-your-life-or-run-the-risk-of-failing-to-live-it-5d0704e5a355#.ihjztux1t">Outline Your Life</a></li>
@@ -55,7 +55,7 @@
       </section>
       <footer>
 
-          <p class="view">Subscribe to my newsletter. I won't bother you often.</p>
+          <p class="view"><small>Subscribe to my newsletter. I won't bother you often.</small></p>
           <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
         <p><small>Copyright 2016 &mdash; All rights reserved.</small></p>
