--- a/index.html
+++ b/index.html
@@ -53,6 +53,91 @@
          </p>
 
       </section>
+
+      <section>
+        <h2 class="page-title">Recommended Reading</h2>
+  <p>Below is a list of literature—both digital and paper-based—that will do two things:</p>
+
+<ol>
+  <li>Help you to more fully appreciate the content of this site.</li>
+  <li>Have at least a mildly positive impact on your life.</li>
+</ol>
+
+<h3 id="getting-things-done-the-art-of-stress-free-productivityhttpwwwamazoncomgpproduct0143126563refaslitlieutf8camp1789creative9325creativeasin0143126563linkcodeas2tagyoufoolau-20linkidvqobzgsubjif3e43"><a href="http://www.amazon.com/gp/product/0143126563/ref=as_li_tl?ie=UTF8&amp;camp=1789&amp;creative=9325&amp;creativeASIN=0143126563&amp;linkCode=as2&amp;tag=youfoolau-20&amp;linkId=VQOBZGSUBJIF3E43">Getting Things Done: The Art of Stress-Free Productivity</a></h3>
+<dl>
+  <dt>by David Allen</dt>
+  <dd>There are few books that I have read that I can honestly say changed the way I think and act on a daily basis. This is one of them. From the day I began reading the book, I became enthused about actually keeping thorough track of <em>everything</em> that I want to do, and about striving to have an utterly empty mind. I am <em>far</em> from being adept at using the system—after all, I still struggle getting myself to do an actual weekly review—but I know enough about the system to know that once I get my ass in full gear using it, the returns will be realized.</dd>
+</dl>
+
+<h3 id="a-lecture-on-creativity-transcription-on-geniuscomhttpgeniuscom5026043"><a href="http://genius.com/5026043">A Lecture on Creativity (transcription on Genius.com)</a></h3>
+<dl>
+  <dt>by John Cleese</dt>
+  <dd>The video of this lecture—given by the <em>Monty Python</em> co-founder, actor, and creative genius John Cleese—is an internet classic by now. It’s a really great foray into some of the more academic work done on creative thinking and actually <em>creating</em> cool stuff, but presented by a guy who clearly knows how to engage an audience. The particular link I provided above is an annotated transcript on <a href="http://genius.com">genius.com</a> (love that site!). Take the time to read it, if you can.</dd>
+</dl>
+
+<h3 id="the-dhammapadahttpwwwamazoncomdhammapada-classics-indian-spiritualitydp1586380206refasapbcieutf8"><a href="http://www.amazon.com/Dhammapada-Classics-Indian-Spirituality/dp/1586380206/ref=asap_bc?ie=UTF8">The Dhammapada</a></h3>
+<dl>
+  <dt>Translation by Eknath Easwaran</dt>
+  <dd><em>The Dahammapada</em> is one small book of the <em>many</em> books of the Buddhist canon—otherwise known as the Tripitaka. It is considered by many to be the best single source to capture the essence of Buddhism—regardless of the particular flavor of Buddhism that one may prefer. The translation listed here is the one (of the many I have read) that captures what I believe to be the spirit of the work the best.</dd>
+  <dd>
+    <p>The book is listed here because it is—in my estimation—a powerful tome that transcends the particular spiritual community that has adopted it. I don’t recommend this book as a prescription of faith; there is actually little to no faith involved in Buddhism anyway. I list the book here because it is rife with very good general advice and contains very little gobbledy-gook, if you will.</p>
+  </dd>
+</dl>
+
+<h3 id="when-breath-becomes-airhttpwwwamazoncomgpproduct081298840xrefxgrwbbieutf8taghttpwwwgoodco-20linkcodeas2camp1789creative9325creativeasin081298840xsubscriptionid1mgpyb6yw3hwk55xcgg2"><a href="http://www.amazon.com/gp/product/081298840X/ref=x_gr_w_bb?ie=UTF8&amp;tag=httpwwwgoodco-20&amp;linkCode=as2&amp;camp=1789&amp;creative=9325&amp;creativeASIN=081298840X&amp;SubscriptionId=1MGPYB6YW3HWK55XCGG2">When Breath Becomes Air</a></h3>
+<dl>
+  <dt>By Paul Kalanithi</dt>
+  <dd>Dr. Kalanithi was a neurosurgeon at Stanford, but was steeped in all the things I hold dear: philosophy, classics, religious studies, art, etc. This book is a memoir about his life as a thinker, a doctor, a husband, and a father, up until his death from stage IV cancer. It’s a really great read—filled with great musings on the bigger questions in life, but also warm accounts of lessons learned by actually being there as people died.</dd>
+  <dd>
+    <p>While Kalanithi’s account of his own journey toward death is moving on its own, my usually stone cold heart was nearly melted by the epilogue, which his wife, Lucy, wrote after his death. The epilogue is an account of Paul’s death, and how Lucy experienced it. It is gripping, but told in such a way that you really feel what it must feel like to be in your final moments. It’s a fantastic book.</p>
+  </dd>
+</dl>
+
+<h3 id="the-tao-te-chinghttpwwwamazoncomtao-te-ching-lao-tsudp0307949303refdpobimagebk"><a href="http://www.amazon.com/Tao-Te-Ching-Lao-Tsu/dp/0307949303/ref=dp_ob_image_bk">The Tao Te Ching</a></h3>
+<dl>
+  <dt>by Lao Tzu<sup id="fnref:1"><a href="#fn:1" class="footnote">1</a></sup></dt>
+  <dd>Eastern philosophy is rife with really great books that can (and have) become part of a lot of people’s “must read” lists. The <em>Tao Te Ching</em> makes mine because it has so much to say (and also <em>not</em> to say) about pretty much everything.</dd>
+</dl>
+
+<h3 id="essentialism-the-disciplined-pursuit-of-lesshttpwwwamazoncomgpproduct0804137382refaslitlieutf8camp1789creative9325creativeasin0804137382linkcodeas2tagyoufoolau-20linkidn5bcbiv7r35ftkdg"><a href="http://www.amazon.com/gp/product/0804137382/ref=as_li_tl?ie=UTF8&amp;camp=1789&amp;creative=9325&amp;creativeASIN=0804137382&amp;linkCode=as2&amp;tag=youfoolau-20&amp;linkId=N5BCBIV7R35FTKDG">Essentialism: The Disciplined Pursuit of Less</a></h3>
+<dl>
+  <dt>By Greg McKeown</dt>
+  <dd>I first read this book as I began to give up the ghost on becoming an academic, and it helped me come to grips with my new career path. I credit it with helping to slow my roll, and focus on sifting through all the noise to find the signal. I am sure that it will do the same for anyone else who chooses to read it.</dd>
+</dl>
+
+<h3 id="autobiography-of-malcolm-x-as-told-to-alex-haleyhttpwwwamazoncomthe-autobiography-malcolm-told-haleydp0345350685"><a href="http://www.amazon.com/The-Autobiography-Malcolm-Told-Haley/dp/0345350685">Autobiography of Malcolm X: As Told to Alex Haley</a></h3>
+<dl>
+  <dt>By Malcolm X and Alex Haley</dt>
+  <dd>One of the traits that I have found to be most admirable in public figures is the willingness to evolve right in front of the eyes of the public. To really do this demands a lot of other admirable traits, like open-mindedness, humility, intellectual curiosity, and honesty. Malcolm X’s story is a prime example of the manifestation of all of these traits. His tale is one of imperfection, fully embraced and utilized to push further toward discovering the truth, and toward social justice. He takes wrong turns along the way, and is never afraid to change course. If nothing else, this is just a really good read about an important, and kind of (sadly) neglected historical figure.</dd>
+</dl>
+
+<h3 id="the-7-habits-of-highly-effective-peoplehttpwwwamazoncomthe-habits-highly-effective-peopledp0743269519"><a href="http://www.amazon.com/The-Habits-Highly-Effective-People/dp/0743269519">The 7 Habits of Highly Effective People</a></h3>
+<dl>
+  <dt>By Stephen R. Covey</dt>
+  <dd>This book is considered a classic by many in the broader business world for a reason: it’s packed with really good advice. The 7 habits are highly intuitive, and if followed, it’s easy to see how they can make one a very effective and successful person. The great thing about it, though is it’s not like <a href="http://www.amazon.com/gp/product/0307465357/ref=as_li_ss_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0307465357&amp;linkCode=as2&amp;tag=offsitoftimfe-20">some other books that are lauded by many a business douche</a>. It ties together success in work and life, and defines them in a way that isn’t about squeezing 10x out of everything and traveling to various destinations. Covey deals with the meat and potatoes of life—the relationships we build and maintain. Those are difficult work at times, and Covey has good advice on how to do that work.</dd>
+</dl>
+
+<h3 id="not-always-sohttpwwwamazoncomnot-always-so-practicing-spiritdp0060957549refsr11sbooksieutf8qid1458831969sr1-1keywordsnotalwaysso"><a href="http://www.amazon.com/Not-Always-So-Practicing-Spirit/dp/0060957549/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1458831969&amp;sr=1-1&amp;keywords=not+always+so">Not Always So</a></h3>
+<dl>
+  <dt>By Shunryu Suzuki</dt>
+  <dd>I read this book at the behest of one of my mentors, Dr. Grant Olson, who helped point me on my way with regards to learning the ins and outs of Buddhism. I am by no means a pious Buddhist—hell, I’m lucky to even meditate a few times per year. However, this book (and a few others by the same author) is so rich with prescriptions for how to think about life, death, emotions, pain, and all that thorny stuff of life—it has something for anyone just looking to reframe their view of reality. Suzuki had a way of simply and concretely offering up arresting insights into our mental lives. I’ve read this book many times, and lent it out to a few people. I continue to go back to it regularly because it is so easily digestible and refreshing.</dd>
+</dl>
+
+<h3 id="modes-of-thoughthttpwwwamazoncomgpproduct002935210xrefs9simhgwg14i1rieutf8fplfreshpfrdmatvpdkikx0derpfrdsdesktop-1pfrdr1fzphbg5068a68cp6bd7pfrdt36701pfrdp2437869742pfrdidesktop"><a href="http://www.amazon.com/gp/product/002935210X/ref=s9_simh_gw_g14_i1_r?ie=UTF8&amp;fpl=fresh&amp;pf_rd_m=ATVPDKIKX0DER&amp;pf_rd_s=desktop-1&amp;pf_rd_r=1FZPHBG5068A68CP6BD7&amp;pf_rd_t=36701&amp;pf_rd_p=2437869742&amp;pf_rd_i=desktop">Modes of Thought</a></h3>
+<dl>
+  <dt>By Alfred North Whitehead</dt>
+  <dd>I did both undergraduate and graduate work in philosophy. From my point of view, it did wonders for my approach to problem-solving, creative work, and strategizing. A great deal of the literature I read—and still love—is not widely useful to those not interested in the specifics of the academic philosophical debates. However, this work is a really great example of high level speculative thinking. Whitehead talks a great deal in it about the different ways we think, and about how philosophers doing metaphysics can actually be doing really creative work. Whitehead’s views on ideas and philosophical work have had a profound influence on me; I’d recommend them for anyone who is interested in gaining a different perspective on their relation to reality, and their cognitive process. If you like this work I’d also recommend his larger, more dense work, <em>Process and Reality</em>.</dd>
+</dl>
+
+<div class="footnotes">
+  <ol>
+    <li id="fn:1">
+      <p><em>Ostensibly</em> by Lao Tzu. You see, the authorship of the book, actually originally named the <em>Laozi</em> for its purported author, is hotly disputed. Laozi (Lao Tzu) was either a real guy—and an extraordinary one at that—who wrote a cool book at the behest of some guard as was leaving town for good to retire, or an entirely fictitious entity created after various maxims were collected into a widely distributable format. <a href="#fnref:1" class="reversefootnote">&#8617;</a></p>
+    </li>
+  </ol>
+</div>
+</section>
+
       <footer>
 
           <p class="view"><small>Subscribe to my newsletter. I won't bother you often.</small></p>
