--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Mike Sturm</h1>
+        <h1 class="title">Mike Sturm</h1>
         <style>
           img {
             width:25%;
