--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
+          <li><a href="/recommended-reading"><strong>Recommended Reading</strong></a></li>
+          <li><a href="/blog"><strong>Blog</strong></a></li>
+        </ul>
+
+        <ul>
           <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong><i class="fa fa-twitter" aria-hidden="true"></i></strong></a></li>
           <li><a href="https://medium.com/@mikesturm">Read longform <strong><i class="fa fa-medium" aria-hidden="true"></i></strong></a></li>
           <li><a href="mailto:mike@yourfool.com">Contact Me <strong><i class="fa fa-envelope" aria-hidden="true"></i></strong></a></li>
