--- a/recommended-reading.html
+++ b/recommended-reading.html
@@ -36,7 +36,8 @@
 
 
 <section>
-  <h1>Recommended Reading</h>
+  <h1>Recommended Reading</h1>
+  
 <p>Below is a list of literature—both digital and paper-based—that will do two things:</p>
 
 <ol>
