--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <button type=button><a href="https://medium.com/@mikesturm">Read longform<i class="fa fa-medium" aria-hidden="true"></i></a></button>
           <button type=button><a href="mailto:mike@yourfool.com">Contact Me<i class="fa fa-envelope" aria-hidden="true"></i></a></button>
         </ul>
+      </section>
 
       <footer>
 
