--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <section>
         <h2>Elsewhere on the Web</h2>
-          <button type="button"><a href="https://twitter.com/aperfectsturm">Read short bits <i class="fa fa-twitter" aria-hidden="true"></a></button>
+          <button type="button"><a href="https://twitter.com/aperfectsturm">Read short bits <i class="fa fa-twitter" aria-hidden="true"></i></a></button>
           <button type="button"><a href="https://medium.com/@mikesturm">Read longform <i class="fa fa-medium" aria-hidden="true"></i></a></button>
           <button type="button"><a href="mailto:mike@yourfool.com">Contact Me <i class="fa fa-envelope" aria-hidden="true"></i></a></button>
       </section>
