--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
            </ul>
          </p>
 
+
+<section id="article">
+  <h3>Recent posts</h3>
+<ul>
+    {% for post in site.posts %}
+      <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</section>
+
       </section>
 
       <section>
