--- a/index.html
+++ b/index.html
@@ -47,17 +47,16 @@
            </ul>
          </p>
 
+      </section>
 
 <section id="article">
   <h3>Recent posts</h3>
-<ul>
-    {% for post in site.posts %}
-      <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+  <ul>
+    {% for post in site.posts limit:10 %}
+      <li><a href="{{ post.url }}">
     {% endfor %}
   </ul>
 </section>
-
-      </section>
 
       <section>
         <h2>Elsewhere on the Web</h2>
