--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
   <h3>Recent posts</h3>
   <ul>
     {% for post in site.posts limit:10 %}
-      <li><a href="{{ post.url }}">
+      <li><a href="{{ post.url }}"></li>
     {% endfor %}
+
   </ul>
 </section>
 
