--- a/blog.html
+++ b/blog.html
@@ -41,15 +41,15 @@ title: Blog
 <br>
 <div>
   {% if paginator.next_page %}
-    <a href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
+    <a href="{{ site.baseurl }}blog/page{{paginator.next_page}}">Older</a>
   {% else %}
     <span>Older</span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-      <a href="{{ site.baseurl }}">Newer</a>
+      <a href="{{ site.baseurl }}blog">Newer</a>
     {% else %}
-      <a href="{{ site.baseurl }}page{{paginator.previous_page}}">Newer</a>
+      <a href="{{ site.baseurl }}blog/page{{paginator.previous_page}}">Newer</a>
     {% endif %}
   {% else %}
     <span class="pagination-item newer"> </span>
