--- a/blog.html
+++ b/blog.html
@@ -3,55 +3,10 @@ layout: page
 title: Blog
 ---
 
-<div>
-  {% for post in paginator.posts %}
-  <div>
-  <span>{{ post.date | date_to_string }}</span>
-    <h2>
-      <a href="{{ site.baseurl }}blog/{{ post.url }}">
-        {{ post.title }}
-      </a>
-    </h2>
-    <h3> {{ post.subtitle }}</h3>
+<h1>{{ page.title }}</h1>
+	<ul class="posts">
 
-    <div>
-
-    {{ post.excerpt }}
-    {% capture content_words %}
-      {{ post.content | number_of_words }}
-    {% endcapture %}
-    {% capture excerpt_words %}
-      {{ post.excerpt | number_of_words }}
-    {% endcapture %}
-    {% if excerpt_words != content_words %}
-    <p><a href="{{ site.baseurl }}blog/{{ post.url }}#read-more">Read more →</a>
-    </p>
-    {% endif %}
-
-  <br>
-
-<div style="text-align:center; font-size:small;">
-  <a href="#top">Back to top of page</a>
-</div>
-    </div>
-
-  </div>
-  {% endfor %}
-</div>
-<br>
-<div>
-  {% if paginator.next_page %}
-    <a href="{{ site.baseurl }}blog/page{{paginator.next_page}}">Older</a>
-  {% else %}
-    <span>Older</span>
-  {% endif %}
-  {% if paginator.previous_page %}
-    {% if paginator.page == 2 %}
-      <a href="{{ site.baseurl }}blog">Newer</a>
-    {% else %}
-      <a href="{{ site.baseurl }}blog/page{{paginator.previous_page}}">Newer</a>
-    {% endif %}
-  {% else %}
-    <span class="pagination-item newer"> </span>
-  {% endif %}
-</div>
+	  {% for post in site.posts %}
+	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
