--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
-          <li><a href="/blog"><strong>Blog</strong></a></li>
-          <li><a href="/recommended-reading"><strong>Reading List</strong></a></li>
+          <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
+          <li><a href="{{ site.baseurl }}recommended-reading"><strong>Reading List</strong></a></li>
+          <li><a href="mailto:mike@yourfool.com">Contact</a></li>
         </ul>
 
 
