--- a/recommended-reading.html
+++ b/recommended-reading.html
@@ -22,8 +22,8 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
-          <li><a href="/recommended-reading"><strong>Recommended Reading</strong></a></li>
-          <li><a href="/blog"><strong>Blog</strong></a></li>
+          <li><a href="{{ site.baseurl }}recommended-reading"><strong>Recommended Reading</strong></a></li>
+          <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
         </ul>
 
         <ul>
