more form fixes

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 ---
-layout: page
+layout: default
 title: Contact Me
 ---
-
+<div>
 <form method="post" action="mailto:mike@yourfool.com">
 				<label for="Name">Name:</label>
 				<input type="text" name="Name" id="Name" />
@@ -25,5 +25,3 @@ title: Contact Me
 		</div>
 
 	</div>
-
-	
