removed liquid tags

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
-          <li><a href="{{ site.url }}blog"><strong>Blog</strong></a></li>
-          <li><a href="{{ site.url }}recommended-reading"><strong>Reading List</strong></a></li>
-          <li><a href="{{ site.url }}contact"><strong>Contact</strong></a></li>
+          <li><a href="blog"><strong>Blog</strong></a></li>
+          <li><a href="recommended-reading"><strong>Reading List</strong></a></li>
+          <li><a href="contact"><strong>Contact</strong></a></li>
         </ul>
 
 
