--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="title">Mike Sturm</h1>
+        <h1 class="title"><a href="/">Mike Sturm</a></h1>
         <p>Thinker, writer, <i>bon vivant</i>.</p>
 
         <ul>
