--- a/recommended-reading.html
+++ b/recommended-reading.html
@@ -18,12 +18,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="title">Mike Sturm</h1>
-        <p>Thinker, writer, <i>bon vivant</i>.</p>
+          <h1 class="title"><a href="/">Mike Sturm</a></h1>
+
 
         <ul>
-          <li><a href="{{ site.baseurl }}recommended-reading"><strong>Recommended Reading</strong></a></li>
-          <li><a href="{{ site.baseurl }}blog"><strong>Blog</strong></a></li>
+          <li><a href="blog"><strong>Blog</strong></a></li>
+          <li><a href="recommended-reading"><strong>Reading List</strong></a></li>
+          <li><a href="contact"><strong>Contact</strong></a></li>
         </ul>
 
         <ul>
