--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ title: Blog
 	<ul class="posts">
 
 	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+	    <li><span>{{ post.date | date_to_string }}</span> &#9781; <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
 				<p>{{ post.excerpt }}</p>
 			</li>
       <br>
