--- a/index.html
+++ b/index.html
@@ -63,9 +63,19 @@
           <p class="view"><small>Subscribe to my newsletter. I won't bother you often.</small></p>
           <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
-        <p><small>Copyright 2016 &mdash; All rights reserved.</small></p>
+        <p><small>Copyright Mike Sturm 2016 &mdash; Some rights reserved.</small></p>
         <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
+        <!-- Google Analytics -->
+            <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+              ga('create', 'UA-71215621-1', 'auto');
+              ga('send', 'pageview');
+            </script>
+        </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
