--- a/recommended-reading.html
+++ b/recommended-reading.html
@@ -1,39 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mike Sturm - Recommended Reading</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/png" href="http://www.mikesturm.net/Skeleton/images/Alchemical.png" />
-    <link href="https://fonts.googleapis.com/css?family=Karla:700|Libre+Franklin|Montserrat|Roboto" rel="stylesheet">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-          <h1 class="title"><a href="/">Mike Sturm</a></h1>
-
-
-        <ul>
-          <li><a href="blog"><strong>Blog</strong></a></li>
-          <li><a href="recommended-reading"><strong>Reading List</strong></a></li>
-          <li><a href="contact"><strong>Contact</strong></a></li>
-        </ul>
-
-        <ul>
-          <li><a href="https://twitter.com/aperfectsturm">Read short bits <strong><i class="fa fa-twitter" aria-hidden="true"></i></strong></a></li>
-          <li><a href="https://medium.com/@mikesturm">Read longform <strong><i class="fa fa-medium" aria-hidden="true"></i></strong></a></li>
-          <li><a href="mailto:mike@yourfool.com">Contact Me <strong><i class="fa fa-envelope" aria-hidden="true"></i></strong></a></li>
-        </ul>
-
-      </header>
+---
+layout: page
+title: Recommended Reading
+---
 
 
 <section>
@@ -122,28 +90,3 @@
 </ol>
 </div>
 </section>
-
-<footer>
-
-    <p class="view"><small>Subscribe to my newsletter. I won't bother you often.</small></p>
-    <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
-
-  <p><small>Copyright 2016 &mdash; All rights reserved.</small></p>
-  <p><small>Hosted on GitHub Pages</small></p>
-
-  <!-- Google Analytics -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-71215621-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-
-</footer>
-</div>
-<script src="javascripts/scale.fix.js"></script>
-</body>
-</html>
