--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
       <section>
         <h2>Writings</h2>
-        <p>I have been writing online for several years now, so my work is scattered all over the web. Below are the pieces that I consider some of my best work to date. So far, it is all held within the Medium platform.
+        <p>Below are some pieces that I consider my best work. So far, it is all held within the Medium platform&mdash;in various publications.
            <ul>
-             <li><a href"https://extranewsfeed.com/is-all-our-work-killing-our-future-d946773568ba#.z4fjdjj3w">Is All Our Hard Work Killing Our Future?</a></li>
-             <li><a href="https://hackernoon.com/outline-your-life-or-run-the-risk-of-failing-to-live-it-5d0704e5a355#.ihjztux1t">Outline Your Life</a></li>
-             <li><a href="https://medium.com/self-starter/entrepreneurship-is-not-the-answer-846c0a492ba8#.kijdpmoxc">Entrepreneurship is Not the Answer</a></li>
-             <li><a href="https://theascent.biz/why-startups-need-philosophers-e4fee2de6c40#.d87lidbub">Why Startups Need Philosophers</a></li>
-             <li><a href="https://extranewsfeed.com/whats-wrong-with-inspirational-and-personal-development-writing-on-medium-9a2fe3d72f0e#.lyn3lcw24">What's Wrong With Inspirational and Personal Development Writing on Medium</a></li>
+             <li><a href"https://extranewsfeed.com/is-all-our-work-killing-our-future-d946773568ba#.z4fjdjj3w">Is All Our Hard Work Killing Our Future?</a>In <i>Extra Newsfeed</i>.</li>
+             <li><a href="https://hackernoon.com/outline-your-life-or-run-the-risk-of-failing-to-live-it-5d0704e5a355#.ihjztux1t">Outline Your Life</a>In <i>Hackernoon</i>.</li>
+             <li><a href="https://medium.com/self-starter/entrepreneurship-is-not-the-answer-846c0a492ba8#.kijdpmoxc">Entrepreneurship is Not the Answer</a>In <i>The Creator's Path</i>.</li>
+             <li><a href="https://theascent.biz/why-startups-need-philosophers-e4fee2de6c40#.d87lidbub">Why Startups Need Philosophers</a>In <i>The Ascent</i>.</li>
+             <li><a href="https://extranewsfeed.com/whats-wrong-with-inspirational-and-personal-development-writing-on-medium-9a2fe3d72f0e#.lyn3lcw24">What's Wrong With Inspirational and Personal Development Writing on Medium</a>In <i>Extra Newsfeed</i>.</li>
+             <li><a href="https://extranewsfeed.com/the-other-obesity-epidemic-8d5ffc6407fa#.srmz103pk">The Next Obesity Epidemic</a>In <i>Extra Newsfeed</i>.<li>
            </ul>
          </p>
 
@@ -60,11 +61,12 @@
 
       <footer>
 
-          <p class="view"><small>Subscribe to my newsletter. I won't bother you often.</small></p>
-          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" placeholder="email address" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+          <p class="view">Subscribe to my newsletter. No spamming, no selling&emdash;<i>ever</i>.</p>
+          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
         <p><small>Copyright Mike Sturm 2016 &mdash; Some rights reserved.</small></p>
-        <p><small>Hosted on GitHub Pages</small></p>
+        <br>
+        <p><small>Hosted on GitHub Pages.</small></p>
         <!-- Google Analytics -->
             <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
