--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
       <footer>
 
-          <p class="view">Subscribe to my newsletter. No spamming, no selling&emdash;<i>ever</i>.</p>
-          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+          <p class="view">Subscribe to my newsletter. No spamming, no selling&mdash;<i>ever</i>.</p>
+          <form style="text-align:center;" action="https://tinyletter.com/mike_sturm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mike_sturm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" placeholder="email address" style="width:160px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
         <p><small>Copyright Mike Sturm 2016 &mdash; Some rights reserved.</small></p>
         <br>
