--- a/blog.html
+++ b/blog.html
@@ -3,56 +3,28 @@ layout: page
 title: Blog
 ---
 
-<div id="posts">
-  {% for post in paginator.posts %}
-  <div id="post">
-  <span id="post-date">{{ post.date | date_to_string }}</span>
-    <h2>
-      <a href="{{ post.url }}">
-        {{ post.title }}
-      </a>
-    </h2>
-    <h3> {{ post.subtitle }}</h3>
-
-    <div>
-
-    {{ post.excerpt }}
-    {% capture content_words %}
-      {{ post.content | number_of_words }}
-    {% endcapture %}
-    {% capture excerpt_words %}
-      {{ post.excerpt | number_of_words }}
-    {% endcapture %}
-    {% if excerpt_words != content_words %}
-    <p><a href="{{ post.url }}#read-more">Read more →</a>
-    </p>
-    {% endif %}
-
-  <br>
-
-<div style="text-align:center; font-size:small;">
-  <a href="#top">Back to top of page</a>
-</div>
-    </div>
-
+{% for post in paginator.posts %}
+  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  <p class="author">
+    <span class="date">{{ post.date }}</span>
+  </p>
+  <div class="content">
+    {{ post.content }}
   </div>
-  {% endfor %}
-</div>
-<br>
-<div id="pagination">
-  {% if paginator.next_page %}
-    <a href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
-  {% else %}
-    <span id="pagination-item older">Older</span>
-  {% endif %}
+{% endfor %}
+
+<!-- Pagination links -->
+<div class="pagination">
   {% if paginator.previous_page %}
-    {% if paginator.page == 2 %}
-      <a href="{{ site.baseurl }}">Newer</a>
-    {% else %}
-      <a href="{{ site.baseurl }}page{{paginator.previous_page}}">Newer</a>
-    {% endif %}
+    <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
   {% else %}
-    <span id="pagination-item newer"> </span>
+    <span class="previous">Previous</span>
+  {% endif %}
+  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
   {% endif %}
 </div>
 <!--
