--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@ title: Blog
   </div>
 {% endfor %}
 
-<!-- Pagination links
+<!-- Pagination links--->
 <div class="pagination">
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
@@ -27,7 +27,7 @@ title: Blog
   {% else %}
     <span class="next ">Next</span>
   {% endif %}
-</div>-->
+</div>
 
 <!--	<ul class="posts">
 
