--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
              <li><a href="https://medium.com/self-starter/entrepreneurship-is-not-the-answer-846c0a492ba8#.kijdpmoxc">Entrepreneurship is Not the Answer</a> In <i>The Creator's Path</i>.</li>
              <li><a href="https://theascent.biz/why-startups-need-philosophers-e4fee2de6c40#.d87lidbub">Why Startups Need Philosophers</a> In <i>The Ascent</i>.</li>
              <li><a href="https://extranewsfeed.com/whats-wrong-with-inspirational-and-personal-development-writing-on-medium-9a2fe3d72f0e#.lyn3lcw24">What's Wrong With Inspirational and Personal Development Writing on Medium</a> In <i>Extra Newsfeed</i>.</li>
-             <li><a href="https://extranewsfeed.com/the-other-obesity-epidemic-8d5ffc6407fa#.srmz103pk">The Next Obesity Epidemic</a> In <i>Extra Newsfeed</i>.<li>
+             <li><a href="https://extranewsfeed.com/the-other-obesity-epidemic-8d5ffc6407fa#.srmz103pk">The Next Obesity Epidemic</a> In <i>Extra Newsfeed</i>.</li>
            </ul>
          </p>
 
