--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@ title: Blog
 <ul class="posts">
 
 	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> &#9781; <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+	    <li><span>{{ post.date | date_to_string }}</span> &nbsp; &nbsp; &#9781; <h3><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
 			</li>
-      <br>
+    
 	  {% endfor %}
 	</ul>
