--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <header>
         <h1 class="title"><a href="/">Mike Sturm</a></h1>
-        <p>Thinker, writer, <i>bon vivant</i>.</p>
+        <p>All of the personal development and productivity writing; none of of the pretense and hyperbole.</p>
 
         <ul>
           <li><a href="blog"><strong>Blog</strong></a></li>
