--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,8 @@ layout: page
 title: Blog
 ---
 
-<h3>Below are writings on personal development, productivity, creativity, and commentary. I try my best to write without pretense, hyperbole, name-dropping, or snark. If youd find that I've fallen short of that aim, please <a href="mailto:mike.p.sturm@gmail.com?subject=Regarding Your Blog>let me know.</a></h3>
-
+<h4>Below are writings on personal development, productivity, creativity, and commentary. I try my best to write without pretense, hyperbole, name-dropping, or snark. If youd find that I've fallen short of that aim, please <a href="mailto:mike.p.sturm@gmail.com?subject=Regarding Your Blog">let me know.</a></h4>
+<br>
 <ul class="posts" style="list-style-type:none">
 
 	  {% for post in site.posts %}
