--- a/recommended-reading.html
+++ b/recommended-reading.html
@@ -5,9 +5,8 @@ title: Recommended Reading
 
 
 <section>
-  <h1>Recommended Reading</h1>
-  <br>
-    <p>Below is a list of literature—both digital and paper-based—that will do two things: </p>
+
+    <p>Below is a list of literature—both digital and paper-based—that in my humble opinin will do two things: </p>
 
 <ol>
 <li>Help you to more fully appreciate the content of this site.</li>
