--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,13 @@ title: Blog
 
 	  {% for post in site.posts %}
 	    <li><span>&#9781; &nbsp;{{ post.date | date_to_string }}</span><h3><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
+				{% if page.img %}
+	  <img class="caption__media" data-interchange="
+	  {% for img in page.img %}
+	    [{{site.baseurl}}/graphics/images/{{img[1]}} ({{img[0]}})]
+	    {% unless forloop.last %}, {% endunless %}
+	  {% endfor %}">
+	{% endif %}
 			</li>
 
 	  {% endfor %}
