--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,10 @@
 layout: default
 title: Contact Me
 ---
+<script src="http://www.emailmeform.com/builder/forms/jsform/lsIcQ07t5UK" type="text/javascript"></script>
+<div style="margin-top:18px;text-align:center"><div id='emf_advertisement'><font face="Verdana" size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src="//assets.emailmeform.com/images/footer-logo.png?RU1GLTAyLTI5" /></span><font face="Verdana" size="2" color="#000000">EMF </font><a style="text-decoration:none;" href="http://www.emailmeform.com/" target="_blank"><font face="Verdana" size="2" color="#000000">Online Form</font></a></div></div>
+
+<!--- OLD FORM-------------------------------------------
 <div>
 <form method="post" action="mailto:mike@yourfool.com">
 				<label for="Name">Name:</label>
@@ -26,4 +30,4 @@ title: Contact Me
 			<div style="clear: both;"></div>
 
 
-		</div>
+		</div>---->
