--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>All of the personal development and productivity writing; none of of the pretense and hyperbole.</p>
 
         <ul>
-          <li><a href="blog"><strong>Blog</strong></a></li>
+          <li><a href="writing"><strong>Writing</strong></a></li>
           <li><a href="recommended-reading"><strong>Reading List</strong></a></li>
           <li><a href="contact"><strong>Contact</strong></a></li>
         </ul>
