--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,34 @@
 layout: default
 title: Contact Me
 ---
-<!-- Change the width and height values to suit you best -->
+
+<div id="wufoo-m1g0dfl90xdfwwo">
+Fill out my <a href="https://teamwon.wufoo.com/forms/m1g0dfl90xdfwwo">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/gallery/templates/">Wufoo templates</a> to make your own HTML forms.</div>
+<script type="text/javascript">var m1g0dfl90xdfwwo;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'teamwon',
+'formHash':'m1g0dfl90xdfwwo',
+'autoResize':true,
+'height':'560',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { m1g0dfl90xdfwwo = new WufooForm();m1g0dfl90xdfwwo.initialize(options);m1g0dfl90xdfwwo.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
+
+
+<!---Typeform
 <div class="typeform-widget" data-url="https://mike890.typeform.com/to/RJDDFb" data-text="Contact" style="width:100%;height:500px;"></div>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/contact-form-template/?utm_campaign=RJDDFb&amp;utm_source=typeform.com-4916633-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-contactform&amp;utm_term=EN" style="color: #999" target="_blank">Contact form</a>powered by Typeform</div>
+-->
 
 <!--Email Me Form: operational but looks bad-->
 <!--<script src="http://www.emailmeform.com/builder/forms/jsform/lsIcQ07t5UK" type="text/javascript"></script>
