--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </header>
       <section>
         <h2>About</h2>
-        <img src="graphics/headshot.jpg">
+        <img src="graphics/headshot.jpg" style="
+    align-content: center;
+    border-radius: 50px;">
 
         <p>I am an escaped academic, with an expertise in the written word, a talent for strategy, and a keen eye for design. This means that I excel at branding, social media marketing, content creation (though <a href="https://hackernoon.com/please-stop-calling-it-content-778bf3abfea3#.lr5pmrin7">I prefer to not to use that term</a>), and design. It means that whatever your brand is, I can help you make sure it realizes its full potential on the web. </p>
       </section>
