--- a/recommended-reading.html
+++ b/recommended-reading.html
@@ -81,6 +81,12 @@ title: Recommended Reading
 <dd>I did both undergraduate and graduate work in philosophy. From my point of view, it did wonders for my approach to problem-solving, creative work, and strategizing. A great deal of the literature I read—and still love—is not widely useful to those not interested in the specifics of the academic philosophical debates. However, this work is a really great example of high level speculative thinking. Whitehead talks a great deal in it about the different ways we think, and about how philosophers doing metaphysics can actually be doing really creative work. Whitehead’s views on ideas and philosophical work have had a profound influence on me; I’d recommend them for anyone who is interested in gaining a different perspective on their relation to reality, and their cognitive process. If you like this work I’d also recommend his larger, more dense work, <em>Process and Reality</em>.</dd>
 </dl>
 
+<h3>Deep Work</h3>
+<dl>
+  <dt><a href="http://calnewport.com/books/deep-work/">By Cal Newport</a></dt>
+  <dd>This book helped opne my eyes to just how detrimental things like multitasking and unscheduled workflows can be. I'll never have my day totally scheduled, and I'll probably never <i>only</i> work on one thing at a time, but I will remember just how valuable those things can be to doing quality work. By now, this book is a classic of its genere (whatever that genre is), so I won't go too deep into why I like it, but suffice it to say, it's full of compelling arguments in favor of a very isolated and restricted way of working. Check this one out. It's well worth whatever time you invest in it.</dd>
+</dl>
+
 <div class="footnotes">
 <ol>
 <li id="fn:1">
