--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </header>
       <section>
         <h2>About</h2>
-        <img src="graphics/headshot.jpg" style="
+        <img src="http://www.mikesturm.net/Skeleton/images/Alchemical.png" align="middle" style="
     max-width: 30%;
     border-radius: 50px;">
 
