--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <img src="alchemical.svg" style="max-width: 30%;
     border-radius: 50px; display:block; margin:auto;">
 
-        <p>I am an escaped academic, with an expertise in the written word, a talent for strategy, and a keen eye for design. This means that I excel at branding, social media marketing, content creation (though <a href="https://hackernoon.com/please-stop-calling-it-content-778bf3abfea3#.lr5pmrin7">I prefer to not to use that term</a>), and design. It means that whatever your brand is, I can help you make sure it realizes its full potential on the web. </p>
+        <p>I am Mike Sturm, an ex-academic thinking and writing about thinking&mdash;about how important it is, how we currently do it, and how we can do it better. My writing can be found almost exclusively on Medium, in the following publications: <i>Personal Growth</i>, <i>The Coffeelicious</i>, <i>The Writing Cooperative</i>, <i>Hackernoon</i>, and others. I am also an erstwhile editor at <i>The Junction</i>.</p>
+        <p>I have also written professionally for <a href="https://www.berelationshipready.com/">LovEd</a> and <a href="https://www.nbforum.com/">Nordic Business Forum</a>.</p>
+        <p>I publish a weekly Newsletter called <a href="http://tinyletter.com/mike_sturm">Woolgathering</a>, which is intended to help you think better, more creatively, and add more value to your work. Signing up for it will not flood your inbox with sales copy, it just gets you one email per week with my hand-crafted thoughts and curated reading material from around the web and around the bookshelves.</a>
       </section>
 
 
