Adding Google Aps email verifcation
line 8

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Mike Sturm - Home</title>
 
+    <meta name="google-site-verification" content="oPSC77_EYbJjCafFAchru5bMj3U8bSb-eLLdDAfQaOU" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
